--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="stylesheet" href="style.css">
     <title>Serene Sounds</title>
 </head>
 <body>
@@ -17,8 +17,30 @@
         />
       </video>
 
+      <audio id="waves">
+        <source src="aud/sound/waves-gentle.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="jbirds">
+        <source src="aud/sound/junglebirds.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="rain">
+        <source src="aud/sound/light-rain.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="night">
+        <source src="aud/sound/night-ambience.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="runningwater">
+        <source src="aud/sound/running-water.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="birdschirp">
+        <source src="aud/sound/birds-chirping.mp3" type="audio/mpeg">
+      </audio>
+      <audio id="seagulls">
+        <source src="aud/sound/seagulls.mp3" type="audio/mpeg">
+      </audio>
+
     <!-- Title Screen -->
-    <div class="flex main" id="title">
+    <div class="flex title" id="title">
         <h1>Serene Sounds</h1>
         <button class="button purple" onclick="showElement(app)">Begin</button>
     </div>
@@ -30,9 +52,40 @@
                 <h1>Outdoor Noises</h1>
 
                 <div class="flex opt">
-                    <input class="check" type="checkbox">
-                    <p>Wind</p>
-                    <input id="inwind" type="range" min="0" max="10" value="5">
+                    <input class="check" oninput="toggleSound(this, waves)" type="checkbox">
+                    <p>Waves</p>
+                    <input 
+                    oninput="setVol(this.value, waves)" class="vol" type="range" min="0" max="10" value="5">
+                </div>
+                <div class="flex opt">
+                    <input class="check" oninput="toggleSound(this, runningwater)" type="checkbox">
+                    <p>Running Water</p>
+                    <input 
+                    oninput="setVol(this.value, runningwater)" class="vol" type="range" min="0" max="10" value="5">
+                </div>
+                <div class="flex opt">
+                    <input class="check" oninput="toggleSound(this, rain)" type="checkbox">
+                    <p>Rain</p>
+                    <input 
+                    oninput="setVol(this.value, rain)" class="vol" type="range" min="0" max="10" value="5">
+                </div>
+                <div class="flex opt">
+                    <input class="check" oninput="toggleSound(this, night)" type="checkbox">
+                    <p>Night Ambience</p>
+                    <input 
+                    oninput="setVol(this.value, night)" class="vol" type="range" min="0" max="10" value="5">
+                </div>
+                <div class="flex opt">
+                    <input class="check" oninput="toggleSound(this, birdschirp)" type="checkbox">
+                    <p>Birds Chirping</p>
+                    <input 
+                    oninput="setVol(this.value, birdschirp)" class="vol" type="range" min="0" max="10" value="5">
+                </div>
+                <div class="flex opt">
+                    <input class="check" oninput="toggleSound(this, seagulls)" type="checkbox">
+                    <p>Seagulls</p>
+                    <input 
+                    oninput="setVol(this.value, seagulls)" class="vol" type="range" min="0" max="10" value="5">
                 </div>
 
             </div>
