--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
               type="video/mp4"
             />
           </video>
+          <video autoplay muted loop id="myVideo3" style="display: flex;">
+            <source
+              id="myVideo4"
+              src="img/live/clouds.mp4"
+              type="video/mp4"
+            />
+          </video>
     
           <audio id="waves">
             <source src="aud/sound/waves-gentle.mp3" type="audio/mpeg">
@@ -41,9 +48,6 @@
           </audio>
           <audio id="wind">
             <source src="aud/sound/autumn-wind.mp3" type="audio/mpeg">
-          </audio>
-          <audio id="breakfast">
-            <source src="aud/sound/breakfast_soundscape.mp3" type="audio/mpeg">
           </audio>
           <audio id="cafe1">
             <source src="aud/sound/cafe-ambience.mp3" type="audio/mpeg">
@@ -214,7 +218,7 @@
                 </div>
                 <div class="flex opt">
                     <input class="check" oninput="toggleSound(this, fireplace)" type="checkbox">
-                    <p>Fire</p>
+                    <p>Fireplace</p>
                     <input 
                     oninput="setVol(this.value, fireplace)" class="vol" type="range" min="0" max="10" value="5">
                 </div>
@@ -278,12 +282,15 @@
                     <input 
                     oninput="setVol(this.value, cafe1)" class="vol" type="range" min="0" max="10" value="5">
                 </div>
+
+                <br>
+
                 <div class="flex opt">
-                    <input class="check" oninput="toggleSound(this, breakfast)" type="checkbox">
-                    <p>Breakfast</p>
-                    <input 
-                    oninput="setVol(this.value, breakfast)" class="vol" type="range" min="0" max="10" value="5">
-                </div>
+                  <input class="check" id="autobg" type="checkbox">
+                  <p>Enable Auto Background</p>
+                  <input 
+                  oninput="setVol(this.value, cafe1)" class="vol" type="range" min="0" max="10" value="5">
+              </div>
             </div>
         </div>
         <div class="flex column">
