fixed double vid

--- a/index.html
+++ b/index.html
@@ -10,20 +10,8 @@
 </head>
 <body>
     <div>
-        <video autoplay muted loop id="myVideo" style="display: flex;">
-            <source
-              id="myVideo2"
-              src="img/live/clouds.mp4"
-              type="video/mp4"
-            />
-          </video>
-          <video autoplay muted loop id="myVideo3" style="display: flex;">
-            <source
-              id="myVideo4"
-              src="img/live/clouds.mp4"
-              type="video/mp4"
-            />
-          </video>
+        <video autoplay muted loop id="myVideo" style="display: flex;"></video>
+          <video autoplay muted loop id="myVideo2" style="display: flex;"></video>
     
           <audio id="waves">
             <source src="aud/sound/waves-gentle.mp3" type="audio/mpeg">
