--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <title>Serene Sounds</title>
 </head>
 <body>
@@ -139,7 +140,7 @@
 
     <!-- Title Screen -->
     <div class="flex title" id="title">
-        <h1>Serene Sounds</h1>
+        <img src="img/serenesounds.png" style="height: 50%; margin-right: 5%;">
         <button class="button purple" onclick="showElement(app)">Begin</button>
     </div>
     <!-- App -->
