--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Sofia">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <title>Serene Sounds</title>
@@ -140,8 +143,15 @@
 
     <!-- Title Screen -->
     <div class="flex title" id="title">
-        <img src="img/serenesounds.png" style="height: 50%; margin-right: 5%;">
-        <button class="button purple" onclick="showElement(app)">Begin</button>
+        <!-- <img id="logo" src="img/serenesounds.png" style="height: 50%; margin-right: 5%;"> -->
+        <div id="container">
+          <span class="sign__word logoText s" id="s1">S</span>
+          <span class="sign__word logoText" id="erene">erene</span>
+          <span class="sign__word logoText s" id="s2">S</span>
+          <span class="sign__word logoText" id="ounds">oun . s</span>
+          <span class="sign__word logoText" id="note">♪</span>
+        </div>
+        <button class="btn btn-2" onclick="showElement(app)">Begin Listening</button>
     </div>
     <!-- App -->
     <div class="flex app" id="app" style="display: none;">
