snazzy title screen + mobile better

--- a/index.html
+++ b/index.html
@@ -144,12 +144,14 @@
     <!-- Title Screen -->
     <div class="flex title" id="title">
         <!-- <img id="logo" src="img/serenesounds.png" style="height: 50%; margin-right: 5%;"> -->
+        <div id="box"></div>
+    <div id="line"></div>
         <div id="container">
           <span class="sign__word logoText s" id="s1">S</span>
-          <span class="sign__word logoText" id="erene">erene</span>
+          <span class="sign__word logoText extraText" id="erene">erene</span>
           <span class="sign__word logoText s" id="s2">S</span>
-          <span class="sign__word logoText" id="ounds">oun . s</span>
-          <span class="sign__word logoText" id="note">♪</span>
+          <span class="sign__word logoText extraText" id="ounds">oun . s</span>
+          <span class="sign__word logoText extraText" id="note">♪</span>
         </div>
         <button class="btn btn-2" onclick="showElement(app)">Begin Listening</button>
     </div>
