--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <title>Serene Sounds</title>
 </head>
+<style>
+  @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital@1&display=swap');
+  </style>
 <body>
     <div>
         <video autoplay muted loop id="myVideo" style="display: flex;"></video>
@@ -141,7 +145,7 @@
       </audio>
     </div>
 
-    <p id="version">v1.1.0</p>
+    <p id="version">v0.1.1</p>
 
     <!-- Title Screen -->
     <div class="flex title" id="title">
