--- a/index.html
+++ b/index.html
@@ -9,13 +9,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital@1&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/icon.png" type="image/x-icon">
     <title>Serene Sounds</title>
 </head>
-<style>
-  @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+Display:ital@1&display=swap');
-  </style>
 <body>
     <div>
         <video autoplay muted loop id="myVideo" style="display: flex;"></video>
@@ -145,7 +142,7 @@
       </audio>
     </div>
 
-    <p id="version">v0.1.1</p>
+    <p id="version">v0.1.2</p>
 
     <!-- Title Screen -->
     <div class="flex title" id="title">
@@ -153,11 +150,17 @@
         <div id="box"></div>
     <div id="line"></div>
         <div id="container">
-          <span class="sign__word logoText s" id="s1">S</span>
+          <div id="imgLogo">
+            <img id="ss" src="img/SS.png" alt="">
+            <img id="letters" src="img/erene.png" alt="">
+          </div>
+          <div style="display: none;">
+            <span class="sign__word logoText s" id="s1">S</span>
           <span class="sign__word logoText extraText" id="erene">erene</span>
           <span class="sign__word logoText s" id="s2">S</span>
           <span class="sign__word logoText extraText" id="ounds">oun . s</span>
           <span class="sign__word logoText extraText" id="note">♪</span>
+          </div>
         </div>
         <button class="btn btn-2" onclick="showElement(app)">Begin Listening</button>
     </div>
